<?xml version="1.0"?>
<package>
  <name>femtomes_driver</name>
  <version>2.0.0</version>
  <description>Python driver for Fetmomes INS Receivers.</description>

  <maintainer email="ruizheng@femtomes.com">Rui Zheng</maintainer>
  <maintainer email="zhiyujia@femtomes.com">Zhiyu Jia</maintainer>
  
  <author email="info@femtomes.com">Femtomes Support</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>femtomes_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>python-pcapy</test_depend>
  <test_depend>python-impacket</test_depend>
</package>
