<?xml version="1.0"?>
<package>
  <name>femtomes_msgs</name>
  <version>2.0.0</version>
  <description>ROS messages which represent raw Femtomes FR INS data.</description>

  <maintainer email="ruizheng@femtomes.com">Rui Zheng</maintainer>
  <maintainer email="zhiyujia@femtomes.com">Zhiyu Jia</maintainer>
  
  <author email="info@femtomes.com">Femtomes Support</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
